se agrego el edit y corrigio

--- a/src/app/layouts/dashboard/pages/cursos/cursos.component.html
+++ b/src/app/layouts/dashboard/pages/cursos/cursos.component.html
@@ -12,6 +12,8 @@
               {{curso.description}}
             </mat-card-content>
               <button mat-raised-button color="primary" (click)="openInscriptionModal(curso)">Inscribirse</button>
+              <button mat-raised-button color="primary" (click)="openCursosDetail(curso)">Ver alumnos inscriptos</button>
+
           </mat-card>
     </div>
 </div>
